--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGODB_URI= mongodb+srv://ramidisaisuhas:5gbTG24ts2MoxhGQ@cluster0.aqu4w.mongodb.net/
-PORT=5000
+MONGODB_URI=mongodb+srv://ramidisaisuhas:EpuIQYiLtEPCrepz@cluster0.nb4eh.mongodb.net/
+PORT=3000
